# yi

./: %1  .authorspellings  .boring  .fsck-skiplist  .ghci  .gitignore  .gitmodules  .travis.yml  .weeder.yaml  AUTHORS  Boot.hs  CHANGELOG  Config.hs  Contributors.hs  Dummy.hs  HCAR.tex  HConf.hs  HConfUtils.hs  HEmacs.hs  HLint.hs  LICENSE  Main.hs  Makefile  MkConfig.hs  ParserTest.hs  README  README.md  STYLE  Setup.hs  Setup.lhs  Static.hs  TODO  Yi.hs  YiConfig.example.hs  all-configs.yaml  cabal-make.inc  cabal.project  config.mk  config.sample  configure  (+24 more)
doc/: yi.1  (+7 more)
example-configs/yi-all-static/: Main.hs  lts-6.yaml  lts-7.yaml  package.yaml  stack.yaml  yi-all-static.cabal
example-configs/yi-vim-pango-dynamic/: lts-6.yaml  lts-7.yaml  package.yaml  stack.yaml  yi-config.cabal  yi-vim-pango-dynamic.cabal  yi.hs
example-configs/yi-vim-vty-dynamic/: lts-6.yaml  lts-7.yaml  package.yaml  stack.yaml  yi-config.cabal  yi-vim-vty-dynamic.cabal  yi.hs
example-configs/yi-vim-vty-static/: Main.hs  lts-6.yaml  lts-7.yaml  lts.yaml  package.yaml  stack.yaml  yi-vim-vty-static.cabal
frontends/cocoa/: yi-cocoa.cabal
frontends/pango/: yi-pango.cabal
frontends/vte/: yi-vte.cabal
frontends/vty/: yi-vty.cabal
gtk/: Makefile  yi-gtk.cabal
gtk/Yi/: FastBuffer.hs  UI.hs  UI.hs-boot  Window.hs
yi/: HACKING  HLint.hs  HackerMain.hs  Main.hs  Makefile  Setup.hs  lts-6.yaml  lts-7.yaml  lts-8.yaml  package.yaml  stack.yaml  yi.1  yi.cabal
yi-contrib/: .gitignore  yi-contrib.cabal
yi-contrib/src/Yi/: FuzzyOpen.hs  Templates.hs
yi-contrib/src/Yi/Style/: Misc.hs
yi-core/: package.yaml  yi-core.cabal
yi-core/bench/: Bench.hs
yi-core/src/: Yi.hs
yi-core/src/Parser/: Incremental.hs
yi-core/src/System/: CanonicalizePath.hs  FriendlyPath.hs
yi-core/src/Yi/: Boot.hs  Clip.hs  Command.hs  Completion.hs  CompletionTree.hs  Config.hs  Core.hs  Debug.hs  Dired.hs  Editor.hs  Eval.hs  Event.hs  File.hs  History.hs  Hoogle.hs  IncrementalParse.hs  Interact.hs  JumpList.hs  Keymap.hs  KillRing.hs  Layout.hs  Main.hs  MiniBuffer.hs  Misc.hs  Modes.hs  Monad.hs  Option.hs  Paths.hs  PersistentState.hs  Process.hs  Rectangle.hs  Search.hs  String.hs  Style.hs  Tab.hs  Tag.hs  TextCompletion.hs  Types.hs  Utils.hs
yi-core/src/Yi/Buffer/: Adjusted.hs  Basic.hs  HighLevel.hs  Implementation.hs  Indent.hs  Misc.hs  Normal.hs  Region.hs  Undo.hs
yi-core/src/Yi/Config/: Default.hs  Misc.hs  Simple.hs
yi-core/src/Yi/Keymap/: Keys.hs
yi-core/src/Yi/Mode/: Abella.hs  Common.hs  Compilation.hs  IReader.hs  Interactive.hs  JavaScript.hs
yi-core/src/Yi/Snippets/: Haskell.hs
yi-core/src/Yi/Syntax/: Layout.hs  Paren.hs  Tree.hs
yi-core/src/Yi/UI/: Common.hs  LineNumbers.hs  SimpleLayout.hs  Utils.hs  Vty.hs
yi-core/test/: Spec.hs
yi-core/test/Yi/: CompletionTests.hs  CompletionTreeTests.hs  TagTests.hs
yi-core/test/Yi/Mode/: CommonTests.hs
yi-core/tests/data/: issue_233.pl
yi-core/tests/data/haskell/: 1.hs  12.hs
yi-core/tests/data/issue_192/: in.txt
yi-core/tests/vimtests/blockvisual/: commentblock_2.test  r_3.test  u_2.test  y_4.test
yi-core/tests/vimtests/delete/: dd.test  dd_3.test
yi-core/tests/vimtests/indent/: 1.test  6.test
yi-core/tests/vimtests/insertion/: C-c_2.test  C-c_9.test  C-d_1.test  C-h_0.test  C-w_1.test  C-y_2.test  a_on_empty_line.test  counted_i.test  indent_2.test  indent_8.test
yi-core/tests/vimtests/macros/: 15.test  6.test
yi-core/tests/vimtests/marks/: unjump_quote_blank.test
yi-core/tests/vimtests/numbers/: hex_decrease.test
yi-core/tests/vimtests/paste/: ddjp.test  y_2.test  yjp.test
yi-core/tests/vimtests/repeat/: a.test  capA2.test  r.test  x.test
yi-core/tests/vimtests/replace/: 1.test
yi-core/tests/vimtests/search/: 1.test  counted_1.test
yi-core/tests/vimtests/searchword/: repeat_pound.test
yi-dynamic-configuration/: package.yaml  yi-dynamic-configuration.cabal
yi-dynamic-configuration/src/Yi/: Boot.hs  Main.hs
yi-frontend-pango/: package.yaml  yi-frontend-pango.cabal
yi-frontend-vty/: package.yaml  yi-frontend-vty.cabal
yi-fuzzy-open/: README.rst  package.yaml  yi-fuzzy-open.cabal
yi-fuzzy-open/src/Yi/: Fuzzy.hs
yi-intero/: README.md  package.yaml  yi-intero.cabal
yi-intero/src/: InteroAPI.hs
yi-intero/src/Yi/: Intero.hs
yi-ireader/: package.yaml  yi-ireader.cabal
yi-ireader/src/Yi/: IReader.hs
yi-keymap-cua/: package.yaml  yi-keymap-cua.cabal
yi-keymap-emacs/: package.yaml  yi-keymap-emacs.cabal
yi-keymap-vim/: README.rst  package.yaml  yi-keymap-vim.cabal
yi-keymap-vim/tests/Generic/: TestPureBufferManipulations.hs  TestUtils.hs
yi-keymap-vim/tests/Vim/: TestExCommandParsers.hs  TestPureBufferManipulations.hs  TestPureEditorManipulations.hs
yi-keymap-vim/tests/data/: Makefile  perl_excerpts.pl
yi-language/: .travis.yml  package.yaml  yi-language.cabal
yi-language/src/Yi/: Regex.hs  Region.hs  Style.hs  Syntax.hs  Utils.hs
yi-language/test/: Spec.hs
yi-language/test/test_data/: Simple1.hs_Token  UnicodeLiteral.hs_TToken
yi-misc-modes/: package.yaml  yi-misc-modes.cabal
yi-misc-modes/src/Yi/: Modes.hs
yi-mode-haskell/: package.yaml  yi-mode-haskell.cabal
yi-mode-haskell/test/test_data/: Simple1.hs  Simple1Unicode.hs  Simple1Unicode.hs_Token  UnicodeLiteral.hs
yi-mode-javascript/: package.yaml  yi-mode-javascript.cabal
yi-snippet/: README.rst  package.yaml  yi-snippet.cabal
yi-snippet/examples/: MySnippets.hs
yi-snippet/src/Yi/: Snippet.hs
yi-snippet/test/: TestMain.hs
yi/art/: Makefile  yi+lambda-fat-16.xpm  yi+lambda-fat-32.xpm
yi/example-configs/: yi-cua.hs  yi-simple.hs  yi-vim-colemak.hs  yi-vim-snippets.hs  yi-vim.hs  yi-vim2.hs  yi.hs
yi/src/: Main.hs
yi/src/Data/: Prototype.hs
yi/src/ParserTest/: ParserTest.hs
yi/src/Shim/: Hsinfo.hs  Udproxy.hs
yi/src/Yi/: Boot.hs-boot  File.hs-boot  Keymap.hs  KillRing.hs  Misc.hs  Scion.hs  Style.hs  Syntax.hs  Tag.hs  TextCompletion.hs
yi/src/executable/: Main.hs
yi/src/tests/: Driver.hs  Makefile  TestExParser.hs  TestSuite.hs  TestUtils.hs  TestVim.hs  TestVim2PureEditorManipulations.hs
(+1244 files in other folders)
