name:           yi
version:        0.6.6.1
category:       Development, Editor
synopsis:       The Haskell-Scriptable Editor
description:
  Yi is a text editor written in Haskell and extensible in Haskell. The goal of the Yi project is
  to provide a flexible, powerful, and correct editor for haskell hacking.
license:        GPL
license-file:   LICENSE
author:         AUTHORS
maintainer:     yi-devel@googlegroups.com
homepage:       http://haskell.org/haskellwiki/Yi
bug-reports:    http://code.google.com/p/yi-editor/issues/list
Cabal-Version:  >= 1.14.0
tested-with:    GHC==7.4.1
build-type:     Simple

executable yi
    hs-source-dirs: src/executable src/library
    default-language: Haskell2010
    default-extensions: GADTs
    main-is: Main.hs
    other-modules: Paths_yi
    build-depends:
        base >=4 && <5,
        directory >= 1 && < 2,
        filepath == 1.*,
        mtl == 2.*,
        process == 1.*,
        Cabal >= 1.14.0
    ghc-options: -threaded

test-suite verify-management-process
    type: detailed-0.9
    hs-source-dirs: src/executable src/library test/
    test-module: VerifyManagementProcess
    other-modules: Paths_yi
                   Yi.Test.BatchInteract
                   Yi.Test.Prelude
    default-language: Haskell2010
    default-extensions: GADTs
                        FlexibleContexts
    build-depends:
        base >=4 && <5, 
        directory >= 1 && < 2,
        filepath == 1.*,
        mtl == 2.*,
        process == 1.*,
        Cabal >= 1.14.0,
        regex-posix >= 0.95.1
    ghc-options: -threaded
