name:           yi-gtk
version:        0.2
license:        GPL
license-file:   LICENSE
author:         Don Stewart
maintainer:     dons@cse.unsw.edu.au
build-depends:  base, ghc, mtl, gtk>=0.9.10.4, regex-posix
-- the dependency on regex-posix is there so we ensure the C-level regex library is there.

executable:     yi
main-is:        Main.hs
include-dirs:   ../cbits
c-sources:      ../cbits/YiUtils.c
hs-source-dirs: ., ..
extensions:     CPP, ForeignFunctionInterface
ghc-options:    -Wall -fglasgow-exts -O -funbox-strict-fields -fasm -optl-Wl,-s

-- ghc-options:    -prof -auto-all -Wall -fglasgow-exts -O -funbox-strict-fields -fasm -optl-Wl,-s
