name:           yi-contrib
version:        0.9.0
category:       Development, Editor
synopsis:       Add-ons to Yi, the Haskell-Scriptable Editor
description:
  3rd-party add-ons to Yi. The goal of this package is to simplify the core Yi
  package.
license:        GPL
license-file:   LICENSE
author:         AUTHORS
maintainer:     yi-devel@googlegroups.com
homepage:       http://haskell.org/haskellwiki/Yi
bug-reports:    http://code.google.com/p/yi-editor/issues/list
Cabal-Version:  >= 1.6
tested-with:    GHC==7.6.3
build-type:     Simple

library
  hs-source-dirs: src
  exposed-modules:
    Yi.Config.Users.Amy
    Yi.Config.Users.Anders
    -- Yi.Config.Users.Corey
    -- Yi.Config.Users.Ertai
    Yi.Config.Users.Gwern
    -- Yi.Config.Users.Jeff
    Yi.Config.Users.JP
    Yi.Config.Users.Michal
    Yi.Config.Users.Reiner
    Yi.Style.Misc
    Yi.Templates
    Yi.FuzzyOpen

  build-depends:
    base >=4.0 && <5,
    containers,
    lens >= 3.9,
    directory < 1.3,
    filepath < 1.4,
    split >= 0.1 && < 0.3,
    mtl >= 0.1.0.1,
    yi == 0.9.1,
    time >= 1.0 && < 2.0,
    old-locale >= 1.0 && < 1.2,
    transformers-base,
    yi-language >= 0.1.0.2,
    oo-prototypes

  ghc-options: -Wall
