name:           yi-core
version:        0.13
category:       Development, Editor
synopsis:       The Haskell-Scriptable Editor
description:
  Yi is a text editor written in Haskell and extensible in Haskell. The goal of the Yi project is
  to provide a flexible, powerful, and correct editor for haskell hacking.
license:        GPL-2
license-file:   ../LICENSE
author:         AUTHORS
maintainer:     yi-devel@googlegroups.com
homepage:       https://yi-editor.github.io
bug-reports:    https://github.com/yi-editor/yi/issues
Cabal-Version:  >= 1.20
tested-with:    GHC==7.10.3, GHC==8.0.1
build-type:     Simple

extra-source-files:
  tests/vimtests/README.rst
  tests/vimtests/blockvisual/*.test
  tests/vimtests/change/*.test
  tests/vimtests/delete/*.test
  tests/vimtests/digraphs/*.test
  tests/vimtests/empty/*.test
  tests/vimtests/empty/emptytest/events
  tests/vimtests/empty/emptytest/input
  tests/vimtests/empty/emptytest/output
  tests/vimtests/ex/*.test
  tests/vimtests/ex/d/*.test
  tests/vimtests/ex/g/*.test
  tests/vimtests/ex/gotoline/*.test
  tests/vimtests/ex/s/*.test
  tests/vimtests/find/*.test
  tests/vimtests/indent/*.test
  tests/vimtests/insertion/*.test
  tests/vimtests/insertion/cursorkeys/*.test
  tests/vimtests/joinlines/*.test
  tests/vimtests/jumplist/*.test
  tests/vimtests/macros/*.test
  tests/vimtests/marks/*.test
  tests/vimtests/movement/*.test
  tests/vimtests/movement/bigWord/*.test
  tests/vimtests/movement/char/*.test
  tests/vimtests/movement/char/h_at_bol/events
  tests/vimtests/movement/char/h_at_bol/input
  tests/vimtests/movement/char/h_at_bol/output
  tests/vimtests/movement/char/hl/events
  tests/vimtests/movement/char/hl/input
  tests/vimtests/movement/char/hl/output
  tests/vimtests/movement/char/j/events
  tests/vimtests/movement/char/j/input
  tests/vimtests/movement/char/j/output
  tests/vimtests/movement/char/l_at_eol/events
  tests/vimtests/movement/char/l_at_eol/input
  tests/vimtests/movement/char/l_at_eol/output
  tests/vimtests/movement/cursorkeys/*.test
  tests/vimtests/movement/file/*.test
  tests/vimtests/movement/intraline/*.test
  tests/vimtests/movement/word/*.test
  tests/vimtests/numbers/*.test
  tests/vimtests/paste/*.test
  tests/vimtests/repeat/*.test
  tests/vimtests/replace/*.test
  tests/vimtests/search/*.test
  tests/vimtests/searchword/*.test
  tests/vimtests/sort/*.test
  tests/vimtests/switchcase/*.test
  tests/vimtests/undo/*.test
  tests/vimtests/unicode/*.test
  tests/vimtests/unsorted/*.test
  tests/vimtests/visual/*.test
  tests/vimtests/yank/*.test

source-repository head
  type:     git
  location: https://github.com/yi-editor/yi.git

-- Frontends
flag pango
  Default: False
  Description: Build with Pango frontend

flag hint
  Default: True
  Description: Include hint (haskell interpreter) in yi

library
  hs-source-dirs: src
  default-language: Haskell2010

  if flag(hint)
    CPP-options: -DHINT

  exposed-modules:
    Yi
    Yi.Boot
    Yi.Boot.Internal
    Yi.Buffer
    Yi.Buffer.Adjusted
    Yi.Buffer.HighLevel
    Yi.Buffer.Indent
    Yi.Buffer.Normal
    Yi.Buffer.Misc
    Yi.Buffer.Region
    Yi.Buffer.TextUnit
    Yi.Buffer.Undo
    Yi.Command
    Yi.Command.Help
    Yi.Completion
    Yi.Config
    Yi.Config.Default
    Yi.Config.Misc
    Yi.Config.Lens
    Yi.Config.Simple
    Yi.Config.Simple.Types
    Yi.Core
    Yi.Debug
    Yi.Dired
    Yi.Editor
    Yi.Eval
    Yi.Event
    Yi.File
    Yi.History
    Yi.Hoogle
    Yi.Hooks
    Yi.IReader
    Yi.IncrementalParse
    Yi.Interact
    Yi.JumpList
    Yi.Keymap
    Yi.Keymap.Completion
    Yi.Keymap.Keys
    Yi.KillRing
    Yi.Layout
    Yi.Main
    Yi.MiniBuffer
    Yi.Misc
    Yi.Mode.Abella
    Yi.Mode.Buffers
    Yi.Mode.Compilation
    Yi.Mode.GHCi
    Yi.Mode.Haskell
    Yi.Mode.Haskell.Dollarify
    Yi.Mode.IReader
    Yi.Mode.Interactive
    Yi.Mode.JavaScript
    Yi.Mode.Latex
    Yi.Modes
    Yi.Monad
    Yi.Paths
    Yi.PersistentState
    Yi.Process
    Yi.Rectangle
    Yi.Snippets
    Yi.Snippets.Haskell
    Yi.Search
    Yi.Search.Internal
    Yi.String
    Yi.Syntax.Driver
    Yi.Syntax.Haskell
    Yi.Syntax.JavaScript
    Yi.Syntax.Latex
    Yi.Syntax.Layout
    Yi.Syntax.OnlineTree
    Yi.Syntax.Paren
    Yi.Syntax.Tree
    Yi.Syntax.Strokes.Haskell
    Yi.Tab
    Yi.Tag
    Yi.TextCompletion
    Yi.Types
    Yi.UI.Common
    Yi.UI.SimpleLayout
    Yi.UI.TabBar
    Yi.UI.Utils
    Yi.Verifier.JavaScript
    Yi.Window
    System.FriendlyPath

  if flag(hint)
    build-depends: hint > 0.3.1

  build-depends:
    Cabal >= 1.10,
    array,
    binary >= 0.7,
    containers,
    directory,
    process >= 1.0.1.1,
    old-locale,
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.11,
    dynamic-state >= 0.1.0.5,
    data-default,
    dlist >=0.4.1,
    dyre >=0.8.11,
    filepath >= 1.1,
    hashable >=1.1.2.5,
    microlens-platform,
    mtl >= 0.1.0.1,
    parsec >= 3.0,
    pointedlist >= 0.5,
    text-icu >= 0.7,
    safe >= 0.3.4 && < 0.4,
    split >= 0.1 && < 0.3,
    template-haskell >= 2.4,
    text >= 1.1.1.3,
    time >= 1.1,
    unix-compat >=0.1 && <0.5,
    unordered-containers >= 0.1.3 && < 0.3,
    xdg-basedir >= 0.2.1 && < 0.3,
    transformers-base,
    semigroups,
    word-trie >= 0.2.0.4,
    yi-language >= 0.1.1.0,
    oo-prototypes,
    yi-rope >= 0.7.0.0 && < 0.8,
    exceptions,
    Hclip >= 3

  ghc-options: -Wall -fno-warn-orphans -ferror-spans

  if !os(windows)
    build-depends:
      unix

  if os(windows)
    build-depends:
      Win32

  other-modules:
    Paths_yi_core,

    -- "Internal" modules that the user better not see.
    Yi.Buffer.Implementation,
    Parser.Incremental,

    -- Should probably be split out to another package.
    Control.Exc,
    Data.DelayList,
    System.CanonicalizePath

Test-Suite test-suite
  default-language: Haskell2010
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: TestSuite.hs
  other-modules:
    Driver
    Generic.TestPureBufferManipulations
    Generic.TestUtils
    Vim.EditorManipulations.BufferExCommand
    Vim.TestExCommandParsers
    Vim.TestPureBufferManipulations
    Vim.TestPureEditorManipulations
  build-depends:
    base,
    lens >= 4.7,
    semigroups,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    HUnit,
    QuickCheck,
    filepath,
    directory,
    text,
    yi-language >= 0.1.1.0,
    yi-rope,
    yi
