name:           yi-core
version:        0.19.4
synopsis:       Yi editor core library
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

flag hint
  description: Build with hint (haskell interpreter)
  manual: True
  default: False

library
  hs-source-dirs:
      src
  ghc-options: -Wall -ferror-spans -Wall -fno-warn-orphans -ferror-spans
  build-depends:
      base >= 4.8 && < 5
    , array
    , attoparsec
    , binary >= 0.7
    , bytestring >= 0.9.1
    , containers
    , data-default
    , directory
    , dlist >= 0.4.1
    , dynamic-state >= 0.1.0.5
    , filepath >= 1.1
    , hashable >= 1.1.2.5
    , ListLike >= 4.5
    , microlens-platform
    , mtl >= 0.1.0.1
    , old-locale
    , oo-prototypes
    , parsec >= 3.0
    , pointedlist >= 0.5
    , process >= 1.0.1.1
    , process-extras >= 0.3.3.8
    , split >= 0.2
    , text >= 1.1.1.3
    , time >= 1.1
    , transformers-base
    , unix-compat >= 0.1
    , unordered-containers >= 0.1.3
    , xdg-basedir >= 0.2.1
    , yi-language >= 0.19
    , yi-rope >= 0.10
    , exceptions
  if flag(hint)
    cpp-options: -DHINT
    build-depends:
        hint > 0.3.1
  if os(win32)
    build-depends:
        Win32
  else
    build-depends:
        unix
  exposed-modules:
      Yi
      Yi.Buffer
      Yi.Buffer.HighLevel
      Yi.Buffer.Indent
      Yi.Buffer.Normal
      Yi.Buffer.Misc
      Yi.Buffer.Region
      Yi.Buffer.TextUnit
      Yi.Buffer.Undo
      Yi.Command
      Yi.Command.Help
      Yi.Completion
      Yi.CompletionTree
      Yi.Config
      Yi.Config.Default
      Yi.Config.Misc
      Yi.Config.Lens
      Yi.Config.Simple
      Yi.Config.Simple.Types
      Yi.Core
      Yi.Debug
      Yi.Dired
      Yi.Editor
      Yi.Eval
      Yi.Event
      Yi.File
      Yi.History
      Yi.Hoogle
      Yi.Hooks
      Yi.IncrementalParse
      Yi.Interact
      Yi.JumpList
      Yi.Keymap
      Yi.Keymap.Keys
      Yi.KillRing
      Yi.Layout
      Yi.MiniBuffer
      Yi.Misc
      Yi.Mode.Common
      Yi.Mode.Compilation
      Yi.Mode.Interactive
      Yi.Monad
      Yi.Paths
      Yi.PersistentState
      Yi.Process
      Yi.Rectangle
      Yi.Search
      Yi.Search.Internal
      Yi.String
      Yi.Syntax.Driver
      Yi.Syntax.Layout
      Yi.Syntax.OnlineTree
      Yi.Syntax.Tree
      Yi.Tab
      Yi.Tag
      Yi.TextCompletion
      Yi.Types
      Yi.UI.Common
      Yi.UI.LineNumbers
      Yi.UI.SimpleLayout
      Yi.UI.TabBar
      Yi.UI.Utils
      Yi.Window
      System.FriendlyPath
      Parser.Incremental
      Paths_yi_core
  other-modules:
      Control.Exc
      Data.DelayList
      System.CanonicalizePath
      Yi.Buffer.Implementation
  default-language: Haskell2010

test-suite tasty
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -ferror-spans
  build-depends:
      base >= 4.8 && < 5
    , yi-rope >= 0.10
    , attoparsec
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , quickcheck-text
    , yi-core
    , text
    , containers
  other-modules:
      Yi.CompletionTests
      Yi.CompletionTreeTests
      Yi.Mode.CommonTests
      Yi.TagTests
  default-language: Haskell2010

benchmark all
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  hs-source-dirs:
      bench
  ghc-options: -Wall -ferror-spans -Wall -ferror-spans -rtsopts
  build-depends:
      base >= 4.8 && < 5
    , yi-core
    , yi-rope >= 0.10
    , criterion
    , deepseq
  default-language: Haskell2010
