name:           yi-dynamic-configuration
version:        0.18.0
synopsis:       Dynamic configuration support for Yi
category:       Yi
homepage:       https://github.com/yi-editor/yi#readme
bug-reports:    https://github.com/yi-editor/yi/issues
maintainer:     Yi developers <yi-devel@googlegroups.com>
license:        GPL-2
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/yi-editor/yi

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.8 && < 5
    , data-default
    , dyre >= 0.8.11
    , yi-core >= 0.18
    , transformers-base
    , mtl >= 0.1.0.1
    , microlens-platform
    , text >= 1.0
    , yi-rope >= 0.10
  exposed-modules:
      Yi.Boot
      Yi.Boot.Internal
      Yi.Main
      Yi.Option
  other-modules:
      Paths_yi_dynamic_configuration
  default-language: Haskell2010
